syntax = "proto3";

package proto;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/xws2021-nistagram/common/proto";

service Users {
  rpc LoginUser (LoginRequest) returns (LoginResponse) {
    option(google.api.http) = {
      post: "/api/users/login",
      body: "*"
    };
  }

  rpc CreateUser (CreateUserRequest) returns (UsersDTO) {
    option(google.api.http) = {
      post: "/api/users",
      body: "user"
    };
  }

  rpc GetAllUsers (EmptyRequest) returns (UsersResponse) {
    option(google.api.http) = {
      get: "/api/users"
    };
  }

  rpc UpdateUserProfile (CreateUserDTORequest) returns (EmptyResponse) {
    option(google.api.http) = {
      post: "/api/users/update_profile"
      body: "*"
    };
  }

  rpc UpdateUserPassword (CreatePasswordRequest) returns (EmptyResponse) {
    option(google.api.http) = {
      post: "/api/users/update_password"
      body: "*"
    };
  }

  rpc SearchUser (SearchUserDtoRequest) returns (UsersResponse) {
    option(google.api.http) = {
      post: "/api/users/searchByUser"
      body: "user"
    };
  }

  rpc SendEmail (SendEmailDtoRequest) returns (EmptyResponse) {
    option(google.api.http) = {
      post: "/api/users/sendEmail"
      body: "*"
    };
  }

  rpc GetUserByEmail (RequestEmailUser) returns (UsersDTO) {
    option(google.api.http) = {
      get: "/api/users/getByEmail/{email}"
    };
  }

  rpc ValidateResetCode (RequestResetCode) returns (EmptyResponse) {
    option(google.api.http) = {
      post: "/api/users/validateResetCode"
      body: "*"

    };
  }

  rpc ChangeForgottenPass (CreatePasswordRequest) returns (EmptyResponse) {
    option(google.api.http) = {
      post: "/api/users/changeForgottenPass"
      body: "*"

    };
  }

}

message Password {
  string OldPassword = 1;
  string NewPassword = 2;
  string RepeatedPassword = 3;
  string Id = 4;
}

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string username = 5;
  string password = 6;
  string role = 7;
  google.protobuf.Timestamp birthdate = 8;
  string profilePhoto = 9;
  string phoneNumber = 10;
  string sex = 11;
  bool isActive = 12;
  string biography = 13;
  string website = 14;
  string resetCode=15;
  bool approvedAccount=16;
  google.protobuf.Timestamp tokenEnd=17;
}

message UsersDTO {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string username = 5;
  string role = 6;
  google.protobuf.Timestamp birthdate = 7;
  string profilePhoto = 8;
  string phoneNumber = 9;
  string sex = 10;
  bool isActive = 11;
  string biography = 12;
  string website = 13;
  string category = 14;
  string resetCode=15;
  bool approvedAccount=16;
  google.protobuf.Timestamp tokenEnd=17;
}

//TODO ne treba da vracamo usera vec usera bez sifre i sa biografijom i website-om
message UsersResponse {
  repeated UsersDTO users = 1;
}

message UserResponse {
  UsersDTO users = 1;
}
message CreateUserRequest {
  User user = 1;
}

message CreateUserDTORequest {
  UsersDTO user = 1;
}

message CreatePasswordRequest {
  Password password = 1;
}

message SearchUserDtoRequest {
  UsersDTO user = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string userId = 2;
  string role = 3;
  string username = 4;
}
message SendEmailDtoRequest {
  string to = 1;
}

message RequestEmailUser {
  string email = 1;
}

message RequestResetCode {
  string resetCode = 1;
  string email = 2;
}
message RequestChangeForgottenPass {
  string password = 1;
  string rePassword = 2;
}

message EmptyRequest {}
message EmptyResponse {}
